# mgrip

./: .gitignore  AGENTS.md  CLAUDE.md  margins_grip.gdextension  project.godot
assets/shaders/: sky.gdshader  terrain.gdshader  water.gdshader
gdextension/: Cargo.toml
gdextension/crates/mg_artifacts/: Cargo.toml
gdextension/crates/mg_artifacts/src/: error.rs  lib.rs  manifest.rs  store.rs
gdextension/crates/mg_core/: Cargo.toml
gdextension/crates/mg_core/src/: biome.rs  coords.rs  lib.rs  noise.rs  resource_type.rs  terrain_query.rs
gdextension/crates/mg_noise/: Cargo.toml
gdextension/crates/mg_noise/src/: biome_map.rs  biome_splines.rs  erosion_sim.rs  lib.rs  rivers.rs  terrain_render.rs  visualization.rs  wrap.rs
gdextension/crates/mg_noise/src/derived/: mod.rs
gdextension/crates/mg_noise/src/gpu/: context.rs  mod.rs  perm_table.rs  pipelines.rs
gdextension/crates/mg_noise/src/runtime_presentation/: atmosphere.rs  landform.rs  mod.rs  surface_palette.rs  water_state.rs  zone.rs
gdextension/crates/mg_noise/src/strategy/: continentalness.rs  humidity.rs  light_level.rs  mod.rs  peaks_valleys.rs  rock_hardness.rs  tectonic.rs
gdextension/src/: lib.rs  mesh.rs
gdextension/testdata/runtime_presentation/: seed42_v1_step256.ron
scenes/: main_menu.tscn  map_selector.tscn  world.tscn
scripts/: main_menu.gd
scripts/autoload/: agent_action_validator.gd  (+6 more)
specs/: 001-visual-overhaul.md  002-open-world-streaming-and-lod.md  002a-chunk-model-and-near-streaming-foundation.md  002b-horizon-and-lod-expansion.md  003-pre-launch-map-selector-and-direct-spawn.md  004-agent-playtest-runtime.md  005-rust-driven-terrain-presentation.md  006-dynamic-sky-and-atmospheric-lighting.md  007-world-anchored-noise-layers.md  008-true-topdown-runtime-chunk-preview.md  009-humidity-terminator-ring-fix.md  010-randlebrot-style-macromap-replication.md
tools/: agent_runtime_bridge_runner.py  runtime_presentation_parity.py  runtime_presentation_visual_audit.py  test_fly_swim.py  verify_runtime_presentation.py
(+11 files in other folders)
